[tool.poetry]
name = "threding-and-async"
version = "0.1.0"
description = ""
authors = ["Leonid3# <116304748+fenrisis@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
